# aliyun-green-cip-sdk

./: Cargo.toml  README.md
example/: Cargo.toml
example/src/: main.rs
src/: client.rs  error.rs  lib.rs  signature.rs  utils.rs
src/image_moderation/: api.rs  enums.rs  mod.rs  types.rs
src/test/: image_moderation.rs  mod.rs  text_moderation.rs
src/text_audit/: mod.rs
src/text_moderation/: api.rs  enums.rs  mod.rs  types.rs
